remove the duplicate best match